# cookiecutter-cpp

./: README.rst  azure-pipelines.yml  cookiecutter.json
{{cookiecutter.project_slug}}/: .clang-tidy  .condaenv  .gitignore  .setup.py.swp  CMakeLists.txt  Dockerfile  Makefile  README.rst  azure-pipelines-cpp.yml  azure-pipelines-py.yml  cookiecutter_replay.sh  setup.py
{{cookiecutter.project_slug}}/.azure-pipelines/: az-py-linux.yml
{{cookiecutter.project_slug}}/.azure-pipelines-dev/: linux-cpp.yml  linux-python.yml  win-cpp.yml  win-python.yml
{{cookiecutter.project_slug}}/.azure-pipelines-release/: linux-cpp.yml  linux-python.yml  win-cpp.yml  win-python.yml
{{cookiecutter.project_slug}}/.ci_scripts/: run_docker_build.sh  run_docker_build_dev_python.sh  run_docker_build_release_python_pip.sh
{{cookiecutter.project_slug}}/.cookiecutter_replay/: cookiecutter-cpp.json
{{cookiecutter.project_slug}}/cmake/: PracticalCIProject.cmake  clang-format-check-all-format.sh  clang-format-check-format.sh  clang-format-format-all.sh  clang-format-format.sh  clang-format.cmake  clang-tidy.cmake  static-checks-format-check-all.sh  static-checks-format-check-uncommitted.sh  static-checks-format-fix-all.sh  static-checks-format-fix-uncommitted.sh  static-checks-naming-check-all.sh  static-checks-naming-check-uncommitted.sh  static-checks-naming-fix-all.sh  static-checks-naming-fix-uncommitted.sh  static-checks-run-clang-tidy.sh  static-checks.cmake
{{cookiecutter.project_slug}}/cmake-package/: {{cookiecutter.project_slug}}Config.cmake.in
{{cookiecutter.project_slug}}/conda/: condaenv.yaml  condaenv_dev.yaml
{{cookiecutter.project_slug}}/cpp/: CMakeLists.txt  Makefile
{{cookiecutter.project_slug}}/cpp/cmake/: PracticalCIProject.cmake
{{cookiecutter.project_slug}}/cpp/conda/: condaenv.yaml
{{cookiecutter.project_slug}}/cpp/doc/: CMakeLists.txt
{{cookiecutter.project_slug}}/cpp/include/{{cookiecutter.project_namespace}}/{{cookiecutter.project_slug}}/core/: A.h
{{cookiecutter.project_slug}}/cpp/include/{{cookiecutter.project_slug}}/: A.h  B.h  C.h  D.h
{{cookiecutter.project_slug}}/cpp/include/{{cookiecutter.project_slug}}/core/: A.h  B.h  C.h  D.h
{{cookiecutter.project_slug}}/cpp/src/: A.cpp  B.cpp  C.cpp  CMakeLists.txt  D.cpp  E.cpp  E.h
{{cookiecutter.project_slug}}/cpp/src/core/: A.cpp  B.cpp  C.cpp  CMakeLists.txt  D.cpp  E.cpp  E.h  core_python_bindings.cpp
{{cookiecutter.project_slug}}/cpp/src/module1/: CMakeLists.txt
{{cookiecutter.project_slug}}/cpp/test/: CMakeLists.txt
{{cookiecutter.project_slug}}/cpp/test/core/: CMakeLists.txt  test_core.cpp
{{cookiecutter.project_slug}}/cpp/tests/core/: test_core.cpp  test_core.py
{{cookiecutter.project_slug}}/include/public/{{cookiecutter.project_namespace}}/{{cookiecutter.project_slug}}/: Version.h.in  version.h.in
{{cookiecutter.project_slug}}/include/public/{{cookiecutter.project_namespace}}/{{cookiecutter.project_slug}}/core/: A.h  D.h
{{cookiecutter.project_slug}}/include/{{cookiecutter.project_namespace}}/{{cookiecutter.project_slug}}/: common.h  pybind11_utils.h
{{cookiecutter.project_slug}}/include/{{cookiecutter.project_namespace}}/{{cookiecutter.project_slug}}/core/: A.h  B.h  C.h  D.h
{{cookiecutter.project_slug}}/provision/linux/: install_conda_all_users.sh
{{cookiecutter.project_slug}}/python/: setup.py
{{cookiecutter.project_slug}}/scripts/linux/: clang-format-functions.sh
{{cookiecutter.project_slug}}/src/cpp/core/: A.cpp  B.cpp  C.cpp  D.cpp  E.cpp  E.h  core_python_bindings.cpp
{{cookiecutter.project_slug}}/src/cpp/{{cookiecutter.project_slug}}/: CMakeLists.txt  Version.cpp.in  common.cpp  {{cookiecutter.project_slug}}_python_bindings.cpp
{{cookiecutter.project_slug}}/src/cpp/{{cookiecutter.project_slug}}/core/: A.cpp  B.cpp  C.cpp  CMakeLists.txt  D.cpp  core_python_bindings.h
{{cookiecutter.project_slug}}/tests/cpp/: test_main.cpp
{{cookiecutter.project_slug}}/tests/cpp/core/: test_core.cpp
{{cookiecutter.project_slug}}/tests/cpp/{{cookiecutter.project_slug}}/core/: test_core.cpp
{{cookiecutter.project_slug}}/tests/python/: list_tests.py  test_{{cookiecutter.project_slug}}.py
{{cookiecutter.project_slug}}/tests/python/core/: test_core.py
